--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
 .App-link {
   color: #61dafb;
 }
+.crossed-out {
+  text-decoration: line-through;
+  opacity: 0.6;
+}
 
 @keyframes App-logo-spin {
   from {
